--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,16 @@
 name: permissions_config
+description: A Flutter CLI plugin that auto-adds Android/iOS permissions and generates permission handler logic.
 version: 0.0.1
-description: CLI tool to add platform permissions like camera/mic/storage.
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=2.17.0 <4.0.0"
 
 dependencies:
-  yaml: ^3.1.1
-  xml: ^6.3.0
-  path: ^1.9.1
-  logger: ^2.6.0
-
-dev_dependencies:
-  flutter_lints: ^3.0.1
+  path: ^1.9.0
+  xml: ^6.5.0
+  logger: ^2.0.2
 
 executables:
-  permissions_config: permissions_config
+  permissions_config: bin/permissions_config.dart
+
+repository: https://github.com/jassimpv/permissions_config
+issue_tracker: https://github.com/jassimpv/permissions_config/issues
