--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: permissions_config
 description: A Flutter CLI plugin that auto-adds Android/iOS permissions and generates permission handler logic.
 version: 0.0.1
+
 environment:
   sdk: ">=2.17.0 <4.0.0"
 
@@ -10,7 +11,7 @@ dependencies:
   logger: ^2.0.2
 
 executables:
-  permissions_config: bin/permissions_config.dart
+  permissions_config: permissions_config
 
 repository: https://github.com/jassimpv/permissions_config
 issue_tracker: https://github.com/jassimpv/permissions_config/issues
