--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   path: ^1.9.0
   xml: ^6.5.0
   logger: ^2.0.2
+  permission_handler: ^12.0.1
 
 executables:
   permission_config: permission_config
