--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,12 @@
 name: permission_config
 description: A Flutter CLI plugin that auto-adds Android/iOS permissions and generates permission handler logic.
-version: 0.0.7
+version: 0.0.8
+
+flutter:
+  plugin:
+    platforms:
+      android:
+      ios:
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
@@ -9,7 +15,6 @@ dependencies:
   path: ^1.9.0
   xml: ^6.5.0
   logger: ^2.0.2
-  permission_handler: ^12.0.1
 
 # Marks this as a CLI tool
 executables:
