Add integration and unit tests for permission handling
- Introduced integration tests for the CLI tool to validate permission requests for camera, location, and microphone.
- Implemented unit tests for permission handler file creation, backup, and restoration functionalities.
- Added tests to ensure proper handling of missing Android and iOS directories.
- Included error handling tests for unsupported permissions and malformed XML files.
- Updated pubspec.yaml to include necessary development dependencies for testing.
- Created a new permission_handler_test.dart to validate the generated permission handler file structure and syntax.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,11 @@ dependencies:
   xml: ^6.5.0
   logger: ^2.0.2
 
+dev_dependencies:
+  test: ^1.21.0
+  mockito: ^5.4.0
+  build_runner: ^2.4.6
+
 executables:
   permission_config: permission_config
 
